--- a/app/views/nlbc/enterprise.html.erb
+++ b/app/views/nlbc/enterprise.html.erb
@@ -35,55 +35,113 @@
   </div>
 </div>
 
-<div id="table-comparison" class="container">
-  <div class="row justify-content-md-center">
-    <div class="col-md-8">
-      <table class="table">
-        <thead>
-          <tr>
-            <th></th>
-            <th>Nlbootcamps</th>
-            <th>Competitors</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>affordable pricing</td>
-            <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            <td><i class="fa fa-times" aria-hidden="true"></i> double the price</td>
-          </tr>
-          <tr>
-            <td>2 trainers</td>
-            <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            <td><i class="fa fa-times" aria-hidden="true"></i> only 1 trainer</td>
-          </tr>
-          <tr>
-            <td>satisfaction guarantee</td>
-            <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            <td><i class="fa fa-times" aria-hidden="true"></i></td>
-          </tr>
-          <tr>
-            <td>updated courses</td>
-            <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            <td><i class="fa fa-times" aria-hidden="true"></i></td>
-          </tr>
-          <tr>
-            <td>interactive</td>
-            <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            <td><i class="fa fa-times" aria-hidden="true"></i> talking/listening model</td>
-          </tr>
-          <tr>
-            <td>flexible</td>
-            <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            <td><i class="fa fa-times" aria-hidden="true"></i> only daytime</td>
-          </tr>
-          <tr>
-            <td>custom branding</td>
-            <td><i class="fa fa-check" aria-hidden="true"></i></td>
-            <td><i class="fa fa-times" aria-hidden="true"></i></td>
-          </tr>
-        </tbody>
-      </table>
+<div id="enterprise-page" class="margin-top-70">
+  <div class="row">
+    <div class="col image-col satisfaction-image"></div>
+    <div class="col first-quote">
+      <div class="container d-flex h-100">
+        <div class="align-self-center">
+          <div class="stripe-title">Satisfaction guarantee</div>
+          <p> We believe in what we do and in our system.
+            So we offer what nobody else can offer a 100%
+            satisfaction guarantee. If students are not satisfied
+            with the bootcamps, we refund 100% of the money. We do this to
+            remove any doubt you may have before trying our bootcamps. </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col second-quote">
+      <div class="container d-flex h-100">
+        <div class="align-self-center">
+          <div class="stripe-title">2 trainers</div>
+          <p> We offer 2 trainers instead of 1 for every bootcamp.
+            Our bootcamps are fast paced and designed to not get stuck in
+            the challenges. For this, personal attention is very important
+            and this can only be offered when there are 2 trainers present.  </p>
+        </div>
+      </div>
+    </div>
+    <div class="col image-col two-trainers-image"></div>
+  </div>
+
+  <div class="row">
+    <div class="col image-col updates-image"></div>
+    <div class="col third-quote">
+      <div class="container d-flex h-100">
+        <div class="align-self-center">
+          <div class="stripe-title">Updates courses</div>
+          <p> We have a open sourced decentralised learning system.
+            This means that all teachers can add/update and remove content
+            from our courses. But we do this under close inspection and testing
+            to make sure students get the best and up to date material.  </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col fourth-quote">
+      <div class="container d-flex h-100">
+        <div class="align-self-center">
+          <div class="stripe-title">Interactive</div>
+          <p>Unlike the traditional listening model of teachers speaks,
+            students listen. We have a constant interactivity without
+            removing deep focus. This helps to stay emotional aware and
+            interested during the training and also makes it a fun and
+            enjoyable experience.  </p>
+        </div>
+      </div>
+    </div>
+    <div class="col image-col interactive-image"></div>
+  </div>
+
+  <div class="row">
+    <div class="col image-col flexible-image"></div>
+    <div class="col fifth-quote">
+      <div class="container d-flex h-100">
+        <div class="align-self-center">
+          <div class="stripe-title">Flexible </div>
+          <p>Time is the most valuable thing we have and we treat
+            it that way. Different people have time on different moment.
+            We teach during the day, in evenings and even in weekend.
+            We make sure that flexibility is part of our platform. </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col sixth-quote">
+      <div class="container d-flex h-100">
+        <div class="align-self-center">
+          <div class="stripe-title">Custom Branding</div>
+          <p> All companies need to do 3 things well. Product,
+            finance and marketing. We try to help our partners in all areas.
+            We help to think about how to get their name and values
+            out as much as possible.   </p>
+        </div>
+      </div>
+    </div>
+    <div class="col image-col custom-branding-image"></div>
+  </div>
+
+  <div class="row">
+    <div class="col image-col pricing-image"></div>
+    <div class="col seventh-quote">
+      <div class="container d-flex h-100">
+        <div class="align-self-center">
+          <div class="stripe-title">Affordable pricing</div>
+          <p>Its a risky thing to mention but we do it anyway,
+            because this is an important part. We never sacrifice
+            quality in any way, but to achieve our goals we believe
+            taking small amounts and delivering high value to as many as
+            possible and doing it with a big community who cares about
+            sharing knowledge. </p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
