--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="5ermLJULeY23CpGVXip17HZ2GWhpuh8bkbdTFa1yTxU" />
     <title>NLBC</title>
     <%= csrf_meta_tags %>
 
