--- a/app/views/nlbc/index.html.erb
+++ b/app/views/nlbc/index.html.erb
@@ -19,7 +19,7 @@
             We make sure the multiple challenges that you do will be stored
             to your brain efficiently and that you engage with your
             fellow bootcampers.</p>
-          <%= link_to 'Follow Bootcamp', "#", class:"btn btn-primary left-button" %>
+          <%= link_to 'Follow Bootcamp', nlbc_bootcamps_path, class:"btn btn-primary left-button" %>
         </div>
       </div>
     </div>
@@ -49,7 +49,7 @@
           <p> Either you are already knowledgable in your field and you can
             become it. Follow a challenge 3 times which automatically
             gives you the option to become available as a trainer.</p>
-          <%= link_to 'Become a Trainer', "#", class:"btn btn-primary left-button" %>
+          <%= link_to 'Become a Trainer', nlbc_teach_path, class:"btn btn-primary left-button" %>
         </div>
       </div>
     </div>
