--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,6 +30,9 @@
           <a class="nav-link underline <%= white_link? ? 'white-link' : '' %>" href="<%= nlbc_find_a_trainer_path %>">1on1</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link underline <%= white_link? ? 'white-link' : '' %>" href="<%= nlbc_bootcamps_path %>">Bootcamps</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link underline <%= white_link? ? 'white-link' : '' %>" href="<%= nlbc_teach_path %>">Become a trainer</a>
         </li>
         <li class="nav-item dropdown">
