--- a/app/views/nlbc/bootcamps.html.erb
+++ b/app/views/nlbc/bootcamps.html.erb
@@ -79,7 +79,7 @@
                         </div>
                         <div class="col-md-9">
                           <div class="inner-card-main-text">Date</div>
-                          <div class="inner-card-text"><%= bootcamp.date %></div>
+                          <div class="inner-card-text"><%= bootcamp.date.strftime("%Y-%b-%d") %></div>
                         </div>
                       </div>
                     </div>
