paginate teachers and bootcamps

--- a/app/views/nlbc/find_a_trainer.html.erb
+++ b/app/views/nlbc/find_a_trainer.html.erb
@@ -158,6 +158,7 @@
       </div>
     </div>
     <% end %>
+    <%= paginate @trainers, theme: 'twitter-bootstrap-4', pagination_class: "pagination-sm" %>
   </div>
 </div>
 <script type="text/javascript">
