--- a/app/views/nlbc/bootcamps.html.erb
+++ b/app/views/nlbc/bootcamps.html.erb
@@ -107,6 +107,7 @@
       </div>
     </div>
     <% end %>
+    <%= paginate @bootcamps, theme: 'twitter-bootstrap-4', pagination_class: "pagination-sm" %>
   </div>
 </div>
 <script type="text/javascript">
