teach page updates

--- a/app/views/nlbc/_faq.html.erb
+++ b/app/views/nlbc/_faq.html.erb
@@ -187,5 +187,19 @@
         </p>
       </div>
     </div>
+
+    <hr>
+    <div class="item">
+      <button class="toggle-button" data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion15" aria-expanded="false" aria-controls="exampleAccordion15">
+        What is a superteacher ?  <i class="fa fa-chevron-down pull-right" aria-hidden="true"></i>
+      </button>
+      <div id="exampleAccordion15" class="collapse" role="tabpanel">
+        <p class="mb-3 toggle-text">
+          When new teachers spawn because they followed a class with you, you
+          get 10% of the first 10 bootcamps and first 50 private trainings
+          they give(this is still in development at the moment).
+        </p>
+      </div>
+    </div>
   </div>
 </div>
