--- a/app/views/nlbc/teach.html.erb
+++ b/app/views/nlbc/teach.html.erb
@@ -2,7 +2,7 @@
   <div class="overlay"></div>
   <div class="row justify-content-md-center d-flex h-100">
     <div class="col-md-8 content align-self-center">
-      <div align="center" class="enterprise-text">Give 1:1 support</div>
+      <div align="center" class="enterprise-text">Give 1on1 support</div>
       <div align="center" class="enterprise-second">Make your passion your profession </div>
       <div class="row justify-content-md-center">
         <a align="center" href="#get-in-touch" class="btn btn-primary">Apply now </a>
@@ -28,7 +28,7 @@
                       Earn Money
                     </h1>
                     <h1 class="text">
-                      Set your own hourly rates and cash out your earnings anytime.
+                      Set your own rates and cash out your earnings anytime. 
                     </h1>
                   </div>
                 </div>
@@ -37,32 +37,6 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="card pop" style="width: 100%;">
-          <div class="card-body">
-            <div class="row">
-              <div class="col-sm-3 work-card">
-                <svg x="0px" y="0px" width="66px" height="66px" viewBox="0 0 24 24" style="fill: none; stroke: white; stroke-linecap: round; stroke-linejoin: round; stroke-width: 0.3;"><g><path d="M18.983,10.003V8.066c0-3.856-3.138-6.994-6.995-6.994c-3.856,0-6.994,3.138-6.994,6.994v1.937 C3.884,10.069,3,10.867,3,11.849v4.288c0,1.024,0.96,1.858,2.14,1.858h1.332c0.276,0,0.5-0.224,0.5-0.5V10.49 c0-0.276-0.224-0.5-0.5-0.5H5.995V8.066c0-3.305,2.689-5.994,5.994-5.994s5.995,2.689,5.995,5.994V9.99h-0.482 c-0.276,0-0.5,0.224-0.5,0.5v7.005c0,0.276,0.224,0.5,0.5,0.5h1.332c0.083,0,0.162-0.013,0.242-0.021 c-0.283,2.312-1.525,3.223-4.527,3.394c-0.198-0.363-0.57-0.62-1.012-0.62h-1.424c-0.644,0-1.167,0.523-1.167,1.167 s0.523,1.167,1.167,1.167h1.424c0.48,0,0.892-0.292,1.071-0.707c3.137-0.173,5.259-1.122,5.515-4.764 c0.513-0.34,0.851-0.871,0.851-1.473v-4.288C20.973,10.869,20.092,10.072,18.983,10.003z M5.972,16.995H5.14 c-0.618,0-1.14-0.394-1.14-0.858v-4.288c0-0.465,0.522-0.859,1.14-0.859h0.832V16.995z M13.536,22.082h-1.424 c-0.092,0-0.167-0.075-0.167-0.167s0.075-0.167,0.167-0.167h1.424c0.092,0,0.167,0.075,0.167,0.167S13.628,22.082,13.536,22.082z M18.001,16.995V10.99h0.832c0.618,0,1.14,0.394,1.14,0.859v4.288c0,0.465-0.521,0.858-1.14,0.858H18.001z"></path></g></svg>
-              </div>
-              <div class="col-sm-9">
-                <div class="row justify-content-md-left d-flex h-100">
-                  <div class="col-md-8 content align-self-center">
-                    <h1 class="title">
-                      Work Anywhere
-                    </h1>
-                    <h1 class="text">
-                      Teach from home or any other convenient location of your choice.
-                    </h1>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
       <div class="col-md-6">
         <div class="card pop" style="width: 100%;">
           <div class="card-body">
@@ -78,6 +52,32 @@
                     </h1>
                     <h1 class="text">
                       Adjust your personal availability anytime on your calendar.
+                    </h1>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <div class="card pop" style="width: 100%;">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-sm-3 work-card">
+                <svg x="0px" y="0px" width="66px" height="66px" viewBox="0 0 24 24" style="fill: none; stroke: white; stroke-linecap: round; stroke-linejoin: round; stroke-width: 0.3;"><g><path d="M18.983,10.003V8.066c0-3.856-3.138-6.994-6.995-6.994c-3.856,0-6.994,3.138-6.994,6.994v1.937 C3.884,10.069,3,10.867,3,11.849v4.288c0,1.024,0.96,1.858,2.14,1.858h1.332c0.276,0,0.5-0.224,0.5-0.5V10.49 c0-0.276-0.224-0.5-0.5-0.5H5.995V8.066c0-3.305,2.689-5.994,5.994-5.994s5.995,2.689,5.995,5.994V9.99h-0.482 c-0.276,0-0.5,0.224-0.5,0.5v7.005c0,0.276,0.224,0.5,0.5,0.5h1.332c0.083,0,0.162-0.013,0.242-0.021 c-0.283,2.312-1.525,3.223-4.527,3.394c-0.198-0.363-0.57-0.62-1.012-0.62h-1.424c-0.644,0-1.167,0.523-1.167,1.167 s0.523,1.167,1.167,1.167h1.424c0.48,0,0.892-0.292,1.071-0.707c3.137-0.173,5.259-1.122,5.515-4.764 c0.513-0.34,0.851-0.871,0.851-1.473v-4.288C20.973,10.869,20.092,10.072,18.983,10.003z M5.972,16.995H5.14 c-0.618,0-1.14-0.394-1.14-0.858v-4.288c0-0.465,0.522-0.859,1.14-0.859h0.832V16.995z M13.536,22.082h-1.424 c-0.092,0-0.167-0.075-0.167-0.167s0.075-0.167,0.167-0.167h1.424c0.092,0,0.167,0.075,0.167,0.167S13.628,22.082,13.536,22.082z M18.001,16.995V10.99h0.832c0.618,0,1.14,0.394,1.14,0.859v4.288c0,0.465-0.521,0.858-1.14,0.858H18.001z"></path></g></svg>
+              </div>
+              <div class="col-sm-9">
+                <div class="row justify-content-md-left d-flex h-100">
+                  <div class="col-md-8 content align-self-center">
+                    <h1 class="title">
+                      Work anywhere
+                    </h1>
+                    <h1 class="text">
+                      Teach at home or any other convenient location of your choice.
                     </h1>
                   </div>
                 </div>
@@ -126,7 +126,7 @@
                       International community
                     </h1>
                     <h1 class="text">
-                      Teach international students from every corner of the world.
+                      Teach national and international students while traveling.
                     </h1>
                   </div>
                 </div>
@@ -175,7 +175,7 @@
                       Become super teacher
                     </h1>
                     <h1 class="text">
-
+                      Get compensated for every new teacher that exists because of you.
                     </h1>
                   </div>
                 </div>
@@ -195,10 +195,10 @@
                 <div class="row justify-content-md-left d-flex h-100">
                   <div class="col-md-8 content align-self-center">
                     <h1 class="title">
-                      Access/improve training material 
+                      Access and improve training material 
                     </h1>
                     <h1 class="text">
-
+                      Get instant access to the material and work together with fellow teachers to improve it.
                     </h1>
                   </div>
                 </div>
