--- a/app/views/nlbc/teach.html.erb
+++ b/app/views/nlbc/teach.html.erb
@@ -11,6 +11,12 @@
   </div>
 </div>
 
+<div class="row justify-content-md-center">
+  <blockquote class="blockquote">
+    <p class="mb-0 blockquote-paragraph">The art of teaching is the art of assisting discovery</p>
+  </blockquote>
+</div>
+
 <div id="teach-cards" class="jumbotron">
   <div class="container">
     <div class="row">
