--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -170,3 +170,8 @@ nav a {
     background-image: asset-url('enterprise/value.jpeg');
   }
 }
+.blockquote-paragraph{
+  margin-top: 30px;
+  border-left: 5px solid #E9EBED;
+  padding: 8px;
+}
