--- a/app/views/nlbc/enterprise.html.erb
+++ b/app/views/nlbc/enterprise.html.erb
@@ -34,8 +34,12 @@
     </div>
   </div>
 </div>
-
-<div id="enterprise-page" class="margin-top-70">
+<div class="row justify-content-md-center">
+  <blockquote class="blockquote">
+    <p class="mb-0 blockquote-paragraph">Connected companies are more productive companies</p>
+  </blockquote>
+</div>
+<div id="enterprise-page">
   <div class="row">
     <div class="col image-col satisfaction-image"></div>
     <div class="col first-quote">
