--- a/app/views/nlbc/vision.html.erb
+++ b/app/views/nlbc/vision.html.erb
@@ -1,4 +1,9 @@
-<div id="vision-page" class="margin-top-70">
+<div class="row justify-content-md-center margin-top-70">
+  <blockquote class="blockquote">
+    <p class="mb-0 blockquote-paragraph">Don't try to make a living, try to make a difference</p>
+  </blockquote>
+</div>
+<div id="vision-page">
   <div class="row">
     <div class="col image-col first-image"></div>
     <div class="col first-quote">
