choose trainer -> search button text

--- a/app/views/nlbc/find_a_trainer.html.erb
+++ b/app/views/nlbc/find_a_trainer.html.erb
@@ -77,7 +77,7 @@
     </div>
 
     <div class="">
-      <%= submit_tag 'Choose your trainer', class: 'btn btn-sm' %>
+      <%= submit_tag 'Search', class: 'btn btn-sm' %>
     </div>
   </div>
   <% end %>
