--- a/app/views/nlbc/enterprise.html.erb
+++ b/app/views/nlbc/enterprise.html.erb
@@ -35,8 +35,8 @@
   </div>
 </div>
 <div class="row justify-content-md-center">
-  <blockquote class="blockquote">
-    <p class="mb-0 blockquote-paragraph">Connected companies are more productive companies</p>
+  <blockquote class="blockquote" style="margin-top:30px;">
+    <p class="mb-0">Connected companies are more productive companies</p>
   </blockquote>
 </div>
 <div id="enterprise-page">
