--- a/app/views/nlbc/vision.html.erb
+++ b/app/views/nlbc/vision.html.erb
@@ -1,6 +1,6 @@
 <div class="row justify-content-md-center margin-top-70">
-  <blockquote class="blockquote">
-    <p class="mb-0 blockquote-paragraph">Don't try to make a living, try to make a difference</p>
+  <blockquote class="blockquote" style="margin-top: 30px;">
+    <p class="mb-0">Don't try to make a living, try to make a difference</p>
   </blockquote>
 </div>
 <div id="vision-page">
