spelling mistakes fixed

--- a/app/views/nlbc/enterprise.html.erb
+++ b/app/views/nlbc/enterprise.html.erb
@@ -61,10 +61,11 @@
       <div class="container d-flex h-100">
         <div class="align-self-center">
           <div class="stripe-title">2 trainers</div>
-          <p> We offer 2 trainers instead of 1 for every bootcamp.
-            Our bootcamps are fast paced and designed to not get stuck in
-            the challenges. For this, personal attention is very important
-            and this can only be offered when there are 2 trainers present.  </p>
+          <p>We offer 2 trainers instead of 1 for every bootcamp.
+            Our bootcamps are fast paced and designed to not get stuck
+            in the intensive challenges. For this, personal attention is very
+            important and we can only offer it when there are 2
+            trainers present.  </p>
         </div>
       </div>
     </div>
@@ -77,10 +78,11 @@
       <div class="container d-flex h-100">
         <div class="align-self-center">
           <div class="stripe-title">Updates courses</div>
-          <p> We have a open sourced decentralised learning system.
-            This means that all teachers can add/update and remove content
-            from our courses. But we do this under close inspection and testing
-            to make sure students get the best and up to date material.  </p>
+          <p> We have an open sourced decentralised learning system.
+            This means that all teachers can add, update and remove content
+            from our courses. But we do this under close inspection and
+            testing to make sure students get the highest quality and up
+            to date material.  </p>
         </div>
       </div>
     </div>
@@ -91,11 +93,11 @@
       <div class="container d-flex h-100">
         <div class="align-self-center">
           <div class="stripe-title">Interactive</div>
-          <p>Unlike the traditional listening model of teachers speaks,
-            students listen. We have a constant interactivity without
-            removing deep focus. This helps to stay emotional aware and
-            interested during the training and also makes it a fun and
-            enjoyable experience.  </p>
+          <p>Unlike the traditional listening model where teachers
+            speaks and students listen, we have a constant interactivity
+            without removing deep focus. This helps everyone to stay
+            emotional aware and interested during the training and
+            also makes it a more fun and enjoyable experience.  </p>
         </div>
       </div>
     </div>
@@ -108,10 +110,11 @@
       <div class="container d-flex h-100">
         <div class="align-self-center">
           <div class="stripe-title">Flexible </div>
-          <p>Time is the most valuable thing we have and we treat
-            it that way. Different people have time on different moment.
-            We teach during the day, in evenings and even in weekend.
-            We make sure that flexibility is part of our platform. </p>
+          <p>Time is the most valuable asset we have and we have to treat
+            it that way. Different people can make time on different
+            moments. We offer bootcamps during the day, in the
+            evenings and even in weekends. We make sure that
+            flexibility is part of our platform. </p>
         </div>
       </div>
     </div>
@@ -122,10 +125,11 @@
       <div class="container d-flex h-100">
         <div class="align-self-center">
           <div class="stripe-title">Custom Branding</div>
-          <p> All companies need to do 3 things well. Product,
-            finance and marketing. We try to help our partners in all areas.
-            We help to think about how to get their name and values
-            out as much as possible.   </p>
+          <p>All companies must do 3 things well. Product,
+            finance and marketing, while keep customer focused.
+            We try to help our partners in all these areas. We help
+            promoting their products, branding and values as much
+            as possible.   </p>
         </div>
       </div>
     </div>
@@ -138,12 +142,12 @@
       <div class="container d-flex h-100">
         <div class="align-self-center">
           <div class="stripe-title">Affordable pricing</div>
-          <p>Its a risky thing to mention but we do it anyway,
-            because this is an important part. We never sacrifice
-            quality in any way, but to achieve our goals we believe
-            taking small amounts and delivering high value to as many as
-            possible and doing it with a big community who cares about
-            sharing knowledge. </p>
+          <p>It's a risky thing to mention but we do it anyway,
+            because it is important. We will never sacrifice quality
+            in any way, but to achieve our goals we believe taking smaller
+            amounts and delivering the highest value. We are offering this
+            value to as many as possible. Creating a big community who
+            cares about knowledge sharing. </p>
         </div>
       </div>
     </div>
