bugfix in mail output

--- a/app/views/user_notifier_mailer/send_trainer_email.html.erb
+++ b/app/views/user_notifier_mailer/send_trainer_email.html.erb
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Hi, <%= "#{@user.first_name} #{@user.last_name}" %>!</h1>
-    <p><%= "You have new booking for #{@challenges}"%></p>
+    <p><%= "You have new booking for #{@challenges.map{|challenge| challenge.title }.join(', ')}"%></p>
   </body>
 </html>
