home page spellings

--- a/app/views/nlbc/index.html.erb
+++ b/app/views/nlbc/index.html.erb
@@ -3,8 +3,8 @@
   <div class="overlay"></div>
   <div class="row justify-content-md-center d-flex h-100">
     <div class="col-md-8 content align-self-bottom">
-      <div align="center" class="secondary-text">Discover our unique and fun learning method</div>
-      <div align="center" class="paragraph">Choose a passion and sign up for free.</div>
+      <div align="center" class="secondary-text">Discover our proven learning method</div>
+      <div align="center" class="paragraph"></div>
     </div>
   </div>
 </div>
@@ -31,8 +31,8 @@
     <div class="col second-quote">
       <div class="container d-flex h-100">
         <div class="align-self-center">
-          <div class="stripe-title">If you like individual attention or expertise</div>
-          <p> For some this is the best way to learn, because of the 1:1 individual attention.
+          <div class="stripe-title"> If you like individual support</div>
+          <p> For some this is the best way to learn, because of the 1on1 dedicated support.
             Out trainers are either experts in their field or just a
             passionate person like you teaching what they have just learned.</p>
           <%= link_to '1on1', nlbc_find_a_trainer_path, class:"btn btn-primary left-button" %>
