--- a/app/views/nlbc/index.html.erb
+++ b/app/views/nlbc/index.html.erb
@@ -46,8 +46,8 @@
       <div class="container d-flex h-100">
         <div class="align-self-center">
           <div class="stripe-title">If you love what you do and you want to do more of it</div>
-          <p> Either you are already knowledgable in your field and you can
-            become it. Follow a challenge 3 times which automatically
+          <p>Either you are already knowledgable in your field or you can become it.
+            Follow a challenge 3 times which automatically
             gives you the option to become available as a trainer.</p>
           <%= link_to 'Become a Trainer', nlbc_teach_path, class:"btn btn-primary left-button" %>
         </div>
